tests/.nts/error/links_syntax_error1.nts
.chipsets:
input  in
output out

.links:
in:1